--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-5 mb-4 mb-lg-0 user justify-content-center d-flex">
             <img
-              src="/Images/user.jpg"
+              src="Images/user.jpg"
               class="img-fluid rounded-5"
               alt="nazmul"
             />
