--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex p-2"
                 >
                   <img
-                    src="/Images/service/react.png"
+                    src="Images/service/react.png"
                     class="img-fluid w-75"
                     alt="..."
                   />
@@ -447,7 +447,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex p-2"
                 >
                   <img
-                    src="/Images/service/node.png"
+                    src="Images/service/node.png"
                     class="img-fluid w-75 rounded-start"
                     alt="..."
                   />
@@ -474,7 +474,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex p-2"
                 >
                   <img
-                    src="/Images/service/mongodb.png"
+                    src="Images/service/mongodb.png"
                     class="img-fluid w-75 rounded-start"
                     alt="..."
                   />
@@ -501,7 +501,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex p-2"
                 >
                   <img
-                    src="/Images/service/Express-js.png"
+                    src="Images/service/Express-js.png"
                     class="img-fluid w-75"
                     alt="..."
                   />
@@ -528,7 +528,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex p-2"
                 >
                   <img
-                    src="/Images/service/figma.png"
+                    src="Images/service/figma.png"
                     class="img-fluid rounded-start w-75"
                     alt="..."
                   />
@@ -553,7 +553,7 @@
                   class="col-md-4 justify-content-center align-items-center d-flex p-2"
                 >
                   <img
-                    src="/Images/service/github.png"
+                    src="Images/service/github.png"
                     class="img-fluid rounded-start w-75"
                     alt="..."
                   />
