--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
               <span><br />Full-Stack Web Developer<br /></span>From Bangladesh.
             </h1>
             <div class="mt-4">
-              <a class="main-btn" href=""
+              <a
+                class="main-btn"
+                href="Files/CV-Nazmul.pdf"
+                download="CV-Nazmul.pdf"
                 ><button type="button" class="btn btn-link text-light">
                   Download CV
                 </button>
@@ -666,9 +669,7 @@
               <label for="" class="col-sm-3 col-lg-4">Email Me</label>
 
               <div class="col-sm-9 col-lg-8 mb-3 mb-lg-2 text-start">
-                <a href="nazmul-15-14486@diu.edu.bd"
-                  >nazmul-15-14486@diu.edu.bd</a
-                >
+                <a href="n.i.shimul48@gmail.com">n.i.shimul48@gmail.com</a>
               </div>
             </div>
             <form action="">
