--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center mb-4">
-            <span class="subtitle">My Complete Projects</span>
+            <span class="subtitle">Demo Projects</span>
           </div>
         </div>
 
