--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
               <li class="nav-item mt-3 mt-lg-0">
-                <a class="main-btn click" href="#contact"
-                  ><button type="button" class="btn btn-link">HIRE ME</button>
+                <a class="main-btn click" href="mailto:n.i.shimul48@gmail.com">
+                  <button type="button" class="btn btn-link">HIRE ME</button>
                 </a>
               </li>
             </ul>
