--- a/index.html
+++ b/index.html
@@ -746,17 +746,21 @@
 
           <ul class="nav justify-content-lg-end justify-content-sm-center">
             <li class="nav-item">
-              <a href="#" class="nav-link px-2"
+              <a
+                href="https://www.linkedin.com/in/nazmul-islam-shimul/"
+                class="nav-link px-2"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2"
+              <a
+                href="https://www.facebook.com/nazmul.islam.shimul.114/"
+                class="nav-link px-2"
                 ><i class="fa-brands fa-facebook"></i
               ></a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2"
+              <a href="https://github.com/Nazmul14486" class="nav-link px-2"
                 ><i class="fa-brands fa-github"></i
               ></a>
             </li>
